--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "1.0.17",
     "redux": "3.7.2",
     "semantic-ui-css": "2.2.12",
-    "semantic-ui-react": "0.76.0"
+    "semantic-ui-react": "0.76.0",
+    "un-flatten-tree": "2.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
