add form-serialize module

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "date-fns": "1.29.0",
+    "form-serialize": "0.7.2",
     "prop-types": "15.6.0",
     "ramda": "0.25.0",
     "react": "^16.1.1",
